// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkBadge should render correctly 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--normal"
    data-backpack-ds-component="Badge"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with a "centered" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--normal bpk-badge--centered"
    data-backpack-ds-component="Badge"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with a "docked" attribute value equal to "left" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--normal bpk-badge--docked-left"
    data-backpack-ds-component="Badge"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with a "docked" attribute value equal to "right" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--normal bpk-badge--docked-right"
    data-backpack-ds-component="Badge"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with an icon 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--normal"
    data-backpack-ds-component="Badge"
  >
    <svg
      aria-hidden="true"
      height="1rem"
      viewBox="0 0 24 24"
      width="1rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m1.802 6.623 6.279 3.676a1.11 1.11 0 0 0 1.317-.205L12.75 6.75c.32-.326-.336-.632-.782-.716l-8.274-1.69a1.11 1.11 0 0 0-1 .317L1.664 5.71a.58.58 0 0 0 .138.913"
      />
      <path
        d="M6.125 15.085a1.11 1.11 0 0 0 .973-.321l11.77-11.995a4.3 4.3 0 0 1 2.13-1.197l.201-.043a1.05 1.05 0 0 1 1.273 1.296l-.043.206a4.4 4.4 0 0 1-1.175 2.17L17.45 9.078a1.16 1.16 0 0 0-.31 1.016l1.742 9.732a1.16 1.16 0 0 1-.3 1.069l-1.008 1.026a.557.557 0 0 1-.896-.14l-3.664-7.13a.557.557 0 0 0-.896-.14l-2.59 2.64a1.16 1.16 0 0 0-.297 1.085l.662 2.746a1.475 1.475 0 0 1-.86 1.399h-.001a1.1 1.1 0 0 1-1.529-.547L6.29 18.822a1.73 1.73 0 0 0-.791-.807l-3.212-.951a1.163 1.163 0 0 1-.542-1.537 1.43 1.43 0 0 1 1.375-.93z"
      />
    </svg>
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="brand" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--brand"
    data-backpack-ds-component="Badge"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="critical" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--critical"
    data-backpack-ds-component="Badge"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="inverse" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--inverse"
    data-backpack-ds-component="Badge"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="normal" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--normal"
    data-backpack-ds-component="Badge"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="outline" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--outline"
    data-backpack-ds-component="Badge"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="strong" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--strong"
    data-backpack-ds-component="Badge"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="success" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--success"
    data-backpack-ds-component="Badge"
  >
    Promociando
  </span>
</DocumentFragment>
`;

exports[`BpkBadge should render correctly with type="warning" 1`] = `
<DocumentFragment>
  <span
    class="bpk-badge bpk-badge--warning"
    data-backpack-ds-component="Badge"
  >
    Promociando
  </span>
</DocumentFragment>
`;